hero and navbar done

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary {
+  @apply bg-amber-600  hover:bg-amber-700 border-amber-700 hover:border-amber-600;
+}
